--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "jsonwebtoken": "~0.1.0"
   },
   "peerDependencies": {
-    "hapi": "2.x.x"
+    "hapi": ">=2.x.x"
   },
   "devDependencies": {
-    "hapi": "2.x.x",
+    "hapi": "3.x.x",
     "lab": "1.x.x",
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
