--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hapi-auth-jwt",
   "description": "JSON Web Token (JWT) authentication plugin",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Ryan Fitzgerald <ryan.fitz1@gmail.com>",
   "repository": "git://github.com/ryanfitz/hapi-auth-jwt",
   "main": "index",
@@ -12,23 +12,23 @@
     "JWT"
   ],
   "engines": {
-    "node": "0.10.x"
+    "node": ">=0.10.30"
   },
   "dependencies": {
     "boom": "2.x.x",
-    "hoek": "1.x.x",
-    "jsonwebtoken": "~0.1.0"
+    "hoek": "2.x.x",
+    "jsonwebtoken": "1.1.x"
   },
   "peerDependencies": {
-    "hapi": ">=2.x.x"
+    "hapi": ">=6.x.x"
   },
   "devDependencies": {
-    "hapi": "3.x.x",
-    "lab": "1.x.x",
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-bump": "0.0.13"
+    "hapi": "6.x.x",
+    "lab": "3.x.x",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "0.10.x",
+    "grunt-contrib-watch": "0.6.x",
+    "grunt-bump": "0.0.15"
   },
   "scripts": {
     "test": "make test-cov"
