--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
   "dependencies": {
     "boom": "2.x.x",
     "hoek": "2.x.x",
-    "jsonwebtoken": "1.1.x"
+    "jsonwebtoken": "1.3.x"
   },
   "peerDependencies": {
-    "hapi": ">=6.x.x"
+    "hapi": ">=8.x.x"
   },
   "devDependencies": {
-    "hapi": "7.x.x",
-    "lab": "3.x.x",
-    "grunt": "~0.4.5",
+    "boom": "2.x.x",
+    "code": "1.x.x",
+    "hapi": "8.x.x",
+    "lab": "5.x.x",
+    "grunt": "0.4.x",
     "grunt-contrib-jshint": "0.10.x",
     "grunt-contrib-watch": "0.6.x",
-    "grunt-bump": "0.0.15"
+    "grunt-bump": "0.0.16"
   },
   "scripts": {
     "test": "make test-cov"
