--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "~6.x.x",
-    "hapi-auth-jwt": "~0.1.1",
-    "jsonwebtoken": "~0.1.0"
+    "hapi": "8.x.x",
+    "hapi-auth-jwt": "0.2.x",
+    "jsonwebtoken": "1.3.x"
   }
 }
