--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "boom": "2.x.x",
     "hoek": "2.x.x",
-    "jsonwebtoken": "1.3.x"
+    "jsonwebtoken": "3.2.x"
   },
   "peerDependencies": {
     "hapi": ">=8.x.x"
@@ -28,9 +28,9 @@
     "hapi": "8.x.x",
     "lab": "5.x.x",
     "grunt": "0.4.x",
-    "grunt-contrib-jshint": "0.10.x",
+    "grunt-contrib-jshint": "0.11.x",
     "grunt-contrib-watch": "0.6.x",
-    "grunt-bump": "0.0.16"
+    "grunt-bump": "0.1.x"
   },
   "scripts": {
     "test": "make test-cov"
