--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "boom": "2.x.x",
     "hoek": "2.x.x",
-    "jsonwebtoken": "3.2.x"
+    "jsonwebtoken": "^4.2.0"
   },
   "peerDependencies": {
     "hapi": ">=8.x.x"
