--- a/package.json
+++ b/package.json
@@ -17,28 +17,20 @@
   "dependencies": {
     "boom": "2.x.x",
     "hoek": "2.x.x",
-    "jsonwebtoken": "5.0.x"
+    "jsonwebtoken": "5.x.x"
   },
   "peerDependencies": {
     "hapi": ">=8.x.x"
   },
   "devDependencies": {
-    "boom": "2.x.x",
     "code": "1.x.x",
-    "hapi": "8.x.x",
+    "hapi": "9.x.x",
     "lab": "5.x.x",
-    "grunt": "0.4.x",
-    "grunt-contrib-jshint": "0.11.x",
-    "grunt-contrib-watch": "0.6.x",
-    "grunt-bump": "0.1.x"
+    "jshint": "2.x.x",
+    "jshint-stylish": "1.x.x"
   },
   "scripts": {
-    "test": "make test-cov"
+    "test": "make test"
   },
-  "licenses": [
-    {
-      "type": "BSD",
-      "url": "http://github.com/ryanfitz/hapi-auth-jwt/raw/master/LICENSE"
-    }
-  ]
+  "license": "BSD-3-Clause"
 }
