updating example dependencies

--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "8.x.x",
-    "hapi-auth-jwt": "2.x.x",
-    "jsonwebtoken": "1.3.x"
+    "hapi-auth-jwt": "3.x.x",
+    "jsonwebtoken": "5.x.x"
   }
 }
