--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
   },
   "dependencies": {
     "boom": "3.x.x",
-    "hoek": "3.x.x",
+    "hoek": "4.2.1",
     "jsonwebtoken": "5.x.x"
   },
   "peerDependencies": {
-    "hapi": ">=10.x.x"
+    "hapi": ">=14.x.x"
   },
   "devDependencies": {
     "code": "2.x.x",
-    "hapi": "11.x.x",
-    "lab": "7.x.x",
+    "hapi": "14.x.x",
+    "lab": "14.x.x",
     "jshint": "2.x.x",
     "jshint-stylish": "2.x.x"
   },
   "scripts": {
-    "test": "make test"
+    "test": "node test/"
   },
   "license": "BSD-3-Clause"
 }
